第二次提交

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                 <div class="footerBox">
                     <p>
                         &copy; 2024
-                        <a href="https://love.n0ts.top">吴伟贤 && 罗蕊</a>
+                        <a href="https://wuweixian117.github.io/wwxlr.github.io/">吴伟贤 && 罗蕊</a>
                     </p>
-                    <p>THEME MADE BY <a href="https://love.n0ts.top">wwxlr</a></p>
+                    <p>THEME MADE BY <a href="https://wuweixian117.github.io/wwxlr.github.io/">wwxlr</a></p>
                 </div>
             </div>
         </div>
